--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,26 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.input-style{
+  background-color: #f2f2f2;
+  border-radius: 5px;
+}
+.input-style fieldset{ 
+  border: transparent;
+}
+.css-17vbkzs-MuiFormControl-root-MuiTextField-root{
+  margin-top:5px!important;
+  margin-bottom: 10px!important;
+}
+.css-3su884-MuiPaper-root{
+  box-shadow: none!important;
+}
+.btn-prime{
+  height: 1.4375em!important;
+ box-shadow:none;
+ padding:25px!important;
+ margin:20px 0px!important;
+}
+.input-style input{
+  height: 0.8rem!important;
+}
