--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ button:focus-visible {
   margin-top:5px!important;
   margin-bottom: 10px!important;
 }
-.css-3su884-MuiPaper-root{
+.css-3su884-MuiPaper-root,.css-vuzb25{
   box-shadow: none!important;
 }
 .btn-prime{
